frontend/micro-ui/web/micro-ui-internals/packages/css/src/orders/orders.scss
/* ... */
.custom-modal-stepper-non-doc,
.add-signature-modal {
  &.popup-module {
    .popup-module-main {
      .add-signature-main-div {
        padding: 24px;
        display: flex;
        flex-direction: column;
        gap: 24px;
      }

      .not-signed {
        display: flex;
        flex-direction: column;
        gap: 16px;

        h1 {
          margin: 0px;
          font-family: Roboto;
          font-size: 24px;
          font-weight: 700;
          line-height: 28.13px;
          text-align: left;
          color: #3d3c3c;
        }
      }

      .sign-button-wrap {
        display: flex;

        .aadhar-sign-in {
          width: 96px;
          background: none;
          color: #007e7e;
          box-shadow: none;

          h2 {
            font-family: Roboto;
            font-size: 16px;
            font-weight: 700;
            line-height: 18.75px;
            text-align: center;
          }
        }

        .upload-signature {
          background: none;
          color: #007e7e;
          border: none;
          box-shadow: none;

          h2 {
            font-family: Roboto;
            font-size: 16px;
            font-weight: 700;
            line-height: 18.75px;
            text-align: center;
          }
        }
      }

      .donwload-submission {
        display: flex;
        gap: 8px;

        h2 {
          margin: 0px;
        }

        span {
          a {
            color: #007e7e;
          }
        }
      }

      .signed {
        display: flex;
        gap: 16px;

        h1 {
          margin: 0px;
          font-family: Roboto;
          font-size: 24px;
          font-weight: 700;
          line-height: 28.13px;
          text-align: left;
          color: #3d3c3c;
        }

        h2 {
          margin: 0px;
          font-family: Roboto;
          font-size: 14px;
          font-weight: 400;
          line-height: 16.41px;
          text-align: center;
          color: #00703c;
          padding: 6px;
          background-color: #e4f2e4;
          border-radius: 999px;
        }
      }

      .popup-module-action-bar {
        .selector-button-border {
          width: fit-content;
          height: 40px;
          padding: 8px 24px 8px 24px;
          border: 1px solid #007e7e !important;

          h2 {
            font-family: Roboto;
            font-size: 16px;
            font-weight: 700;
            line-height: 18.75px;
            text-align: center;
            color: #007e7e !important;
          }
        }

        .selector-button-primary {
          width: fit-content !important;
          height: 40px;
          padding: 8px 24px 8px 24px;

          h2 {
            font-family: Roboto;
            font-size: 16px;
            font-weight: 700;
            line-height: 18.75px;
            text-align: center;
          }
        }

        .selector-button-primary-disabled {
          width: fit-content !important;
          height: 40px !important;
          padding: 8px 24px 8px 24px !important;

          h2 {
            font-family: Roboto;
            font-size: 16px;
            font-weight: 700;
            line-height: 18.75px;
            text-align: center;
          }
        }
      }
    }
  }
}

.custom-submit-modal {
  display: flex;
  flex-direction: column;
  .success-wrap {
    margin: 0px !important;
    padding: 16px 40px !important;
  }
  .success-card-label {
    margin-top: 16px;
    font-family: Roboto;
    font-size: 19px;
    font-weight: 400;
    line-height: 28.5px;
    text-align: center;
    color: #505a5f;
  }
  .custom-case-info-div {
    margin-top: 16px;
    margin-bottom: 40px;
  }
}

.copy-key-text {
  font-family: Roboto;
  font-size: 19px;
  font-weight: 400;
  line-height: 28.5px;
  color: #505a5f;
  margin: 0px;
}

.orders-success-modal {
  &.popup-module {
    width: 40vw;

    .popup-module-main {
      padding: 40px !important;
      .popup-module-action-bar {
        margin: 0px !important;
        .selector-button-border {
          border: 1px solid #007e7e !important;
          display: flex;
          flex-direction: row-reverse;
          justify-content: center;
          align-items: center;
          height: 40px;
          width: 50%;
          padding: 8px 24px;

          h2 {
            width: 65% !important;
            font-family: Roboto;
            font-size: 16px;
            font-weight: 700;
            line-height: 18.75px;
            text-align: center;
            color: #007e7e !important;
          }

          svg path {
            fill: #007e7e;
          }
        }

        .selector-button-primary {
          height: 40px;
          width: 50%;
          padding: 8px 24px;
          display: flex;
          justify-content: center;
          align-items: center;

          h2 {
            font-family: Roboto;
            font-size: 16px;
            font-weight: 700;
            line-height: 18.75px;
            text-align: center;
          }
        }
      }
    }
  }
}

.success-modal {
  &.popup-module {
    .popup-module-main {
      .popup-module-action-bar {
        .selector-button-border {
          gap: 6px;
          h2 {
            width: fit-content !important;
          }
        }
      }
    }
  }
}
/* ... */

